--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RSA-Rising Stars Academy - Premier Roller Skating Training in Ahmedabad</title>
     <meta name="description" content="RSA-Rising Stars Academy offers professional roller skating training for kids in Ahmedabad, Gujarat. 20+ years of excellence in inline and quad skating with national champions." />
-    <meta name="author" content="Rising Star Academy" />
+    <meta name="author" content="Rising Stars Academy" />
     <meta name="keywords" content="roller skating, Ahmedabad, Gujarat, skating academy, inline skating, quad skating, kids training, skating classes" />
 
     <meta property="og:title" content="RSA-Rising Stars Academy - Premier Roller Skating Training in Ahmedabad" />
