--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     
     <title>RSA – Rising Stars Academy | Premier Sports Academy in Ahmedabad</title>
-    <meta name="description" content="Ahmedabad's premier multi-sport academy with flagship Roller Skating program. Expert coaching in Cricket, Football, Basketball, and more. Book your trial today!" />
+    <meta name="description" content="Ahmedabad's premier multi-sport academy with flagship Roller Skating program. Expert coaching in Skating and other sports. Book your trial today!" />
     <meta name="author" content="Rising Stars Academy" />
     <meta name="keywords" content="sports academy ahmedabad, roller skating coaching, speed skating, cricket coaching, football academy, basketball training, sports coaching gujarat" />
 
     <meta property="og:title" content="RSA – Rising Stars Academy | Premier Sports Academy in Ahmedabad" />
-    <meta property="og:description" content="Ahmedabad's premier multi-sport academy with flagship Roller Skating program. Expert coaching in Cricket, Football, Basketball, and more." />
+    <meta property="og:description" content="Ahmedabad's premier multi-sport academy with flagship Roller Skating program. Expert coaching in Skating and other sports." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="RSA – Rising Stars Academy" />
-    <meta name="twitter:description" content="Ahmedabad's premier multi-sport academy with flagship Roller Skating program" />
+    <meta name="twitter:description" content="Ahmedabad's premier multi-sport academy with flagship Roller Skating coaching" />
     <meta name="twitter:image" content="/favicon.png" />
   </head>
 
